Dank Twitter Bootstrap etwas hübscher

--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -16,3 +16,4 @@
     Wer auf Basis dieser Anwendung (Ruby on Rails/Backbone.js) etwas
     beitragen möchte, findet den
     = link_to "Quelltext auf Github", "https://github.com/dbloete/OpenData-Bremen"
+    = render 'shared/ribbon'
