--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,6 +3,7 @@
   %head
     %title= page_title
     = stylesheet_link_tag 'application'
+    = javascript_include_tag 'http://maps.google.com/maps/api/js?sensor=true'
     = javascript_include_tag 'application'
     = csrf_meta_tag
     = yield(:head)
