Bootstrap-Sass Overrides

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -3,8 +3,17 @@
 @import compass/css3
 
 // Bootstrap
-@import bootstrap
+@import bootstrap/reset
+@import bootstrap/variables
+
+@import bootstrap_overrides
+
+@import bootstrap/mixins
+@import bootstrap/scaffolding
+@import bootstrap/type
+@import bootstrap/forms
+@import bootstrap/tables
+@import bootstrap/patterns
 
 // Application
-@import base
 @import containers
