--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -4,3 +4,6 @@
 %p
   Alle Inhalte basieren auf den
   = link_to "offenen Daten Bremens", "http://daten.bremen.de"
+%p
+  Kartenmarker von
+  = link_to "Nicolas Mollet", "http://mapicons.nicolasmollet.com/"
