Google Analytics hinzugefügt

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -19,3 +19,4 @@
     %footer.footer
       .container
         = render 'shared/footer'
+    = render 'shared/analytics' if Settings.google_analytics_id
