--- a/app/assets/stylesheets/_containers.css.sass
+++ b/app/assets/stylesheets/_containers.css.sass
@@ -14,8 +14,12 @@ section
   right: 0
   border: 0
   z-index: 100001
-
-.map-container
-  width: 100%
-  height: 450px
-  margin: 0 0 1.5em 0
+  
+html.fullscreen-map
+  +fullscreen
+  body, .map-container
+    +fullscreen
+    #map_type_control
+      margin-top: 45px !important
+    #streetmap_control_android
+      margin-top: 45px !important
