Loading Indikator und Asset Helper

--- a/app/assets/stylesheets/_containers.css.sass
+++ b/app/assets/stylesheets/_containers.css.sass
@@ -14,7 +14,15 @@ section
   right: 0
   border: 0
   z-index: 100001
-  
+
+#loading
+  float: left
+  padding: 12px 12px 12px 0
+  width: 16px
+  height: 16px
+  img
+    display: none
+
 html.fullscreen-map
   +fullscreen
   body, .map-container
