Neue Domain: kitas-in-bremen.de

--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -11,7 +11,9 @@
   %p
     Bislang gibt es Ansichten zu folgenden Daten:
   %ul
-    %li= link_to "Einrichtungen zur Tagesbetreuung von Kindern", kitas_path
+    %li
+      = link_to "Kitas in Bremen", Settings.kitas.url
+      \- Einrichtungen zur Tagesbetreuung von Kindern
   %p
     Wer auf Basis dieser Anwendung (Ruby on Rails/Backbone.js) etwas
     beitragen möchte, findet den
