--- a/app/views/layouts/kitas.html.haml
+++ b/app/views/layouts/kitas.html.haml
@@ -3,6 +3,9 @@
   %head
     %title= kitas_title
     %meta(name="viewport" content="initial-scale=1.0, user-scalable=no")
+    %meta(content="text/html; charset=UTF-8" http-equiv="Content-Type")
+    %meta(content="Kitas, Kindergärten und Kindergruppen in Bremen, Einrichtungen zur Tagesbetreuung von Kindern" name="description")
+    %meta(content="Kitas,Kita,Kindertagesstätte,Kindergarten,Elternverein,Kindergruppe,Tagesbetreuung,Bremen,Neustadt,Viertel,Mitte" name="keywords")
     = stylesheet_link_tag 'application'
     = javascript_include_tag 'http://maps.google.com/maps/api/js?sensor=true&language=de'
     = javascript_include_tag 'application'
