--- a/app/assets/stylesheets/_kitas.css.sass
+++ b/app/assets/stylesheets/_kitas.css.sass
@@ -14,3 +14,8 @@ html#kitas
     background: #FFF
     .actions
       margin: 9px 0 0 -20px
+  #kitas-liste
+    ul
+      margin-bottom: 0
+    .pagination
+      margin: 0
