--- a/app/views/layouts/kitas.html.haml
+++ b/app/views/layouts/kitas.html.haml
@@ -1,7 +1,7 @@
 !!!
 %html#kitas.fullscreen-map
   %head
-    %title= kitas_title
+    %title(data-app-title="#{Settings.kitas.name}")= kitas_title
     %meta(name="viewport" content="initial-scale=1.0, user-scalable=no")
     %meta(content="text/html; charset=UTF-8" http-equiv="Content-Type")
     %meta(content="Kitas, Kindergärten und Kindergruppen in Bremen, Einrichtungen zur Tagesbetreuung von Kindern" name="description")
