--- a/app/views/layouts/kitas.html.haml
+++ b/app/views/layouts/kitas.html.haml
@@ -3,6 +3,7 @@
   %head
     %title(data-app-title="#{Settings.kitas.name}")= kitas_title
     %meta(name="viewport" content="initial-scale=1.0, user-scalable=no")
+    %meta(name="google-site-verification" content="FVArairDQWmSZ4FnuFn811fMgvFUp01EbuxZgfpGfvk")
     %meta(content="text/html; charset=UTF-8" http-equiv="Content-Type")
     %meta(content="Kitas, Kindergärten und Kindergruppen in Bremen, Einrichtungen zur Tagesbetreuung von Kindern" name="description")
     %meta(content="Kitas,Kita,Kindertagesstätte,Kindergarten,Elternverein,Kindergruppe,Tagesbetreuung,Bremen,Neustadt,Viertel,Mitte" name="keywords")
