--- a/app/views/kitas/_liste.html.haml
+++ b/app/views/kitas/_liste.html.haml
@@ -4,7 +4,7 @@
     %h3 Kitas, Kindergärten und Kindergruppen in Bremen
   .modal-body
     %ul
-      - kitas.each do |k|
+      - @kitas.each do |k|
         %li= link_to k.name, kita_path(id: k.id, slug: k.slug)
   %footer.modal-footer
-    = paginate kitas
+    = paginate @kitas
